--- a/html-basic/form.html
+++ b/html-basic/form.html
@@ -3,49 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <title>Forms-Example</title>
+  <link href="../assets/styles/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-  <div>
-    <form id="mainForm" name="mainForm" method="post" action="home.html">
-      <label for="firstName">First name:</label>
-      <input type="text" id="firstName" name="firstName" maxlength="10" minlength="5" value="John Smith" required readonly/>
-      <br/><br/>
+<div id="mainContainer">
+  <div id="emptyDiv"></div>
+  <h1>Student Signup</h1>
+
+  <div id="instructions">
+    <p>Please fill in the form to get registered for the course!</p>
+  </div>
+
+  <form id="mainForm" name="mainForm" method="post" action="home.html">
+    <label for="firstName">First name:</label>
+    <input type="text" id="firstName" name="firstName" maxlength="10" minlength="5" value="John Smith" required readonly/>
+    <div class="space-above">
       <label for="age">Age:</label>
       <input type="number" id="age" name="age" min="5" max="50"/>
-      <br/><br/>
+    </div>
+    <div class="hidden">
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" placeholder="eg. abc@sda.com" required/>
-      <br/><br/>
+    </div>
+    <div class="space-above">
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
-      <br/><br/>
+      <input type="password" id="password" name="password" required/>
+    </div>
+    <div class="space-above">
       <label for="joinDate">Joining date:</label>
       <input type="date" id="joinDate" name="joinDate"/>
-      <br/><br/>
+    </div>
+    <div class="space-above">
       <label for="male">Gender:</label>
       <input type="radio" id="male" name="gender"/> Male
       <input type="radio" id="female" name="gender" checked/> Female
-      <br/><br/>
+    </div>
+    <div class="space-above">
       <label for="mathematics">Favourite subjects:</label>
       <input type="checkbox" id="mathematics" name="favouriteSubjects"/> Mathematics
       <input type="checkbox" id="science" name="favouriteSubjects" checked/> Science
       <input type="checkbox" id="software" name="favouriteSubjects"/> Software
-      <br/><br/>
+    </div>
+    <div class="hidden">
       <label for="address">Address:</label>
       <textarea id="address" name="address" cols="10" rows="5"></textarea>
-      <br/><br/>
+    </div>
+    <div class="space-above">
       <label for="favouriteFood">Favourite food:</label>
       <select id="favouriteFood" name="favouriteFood">
         <option value="rice">Rice</option>
         <option value="pizza" selected>Pizza</option>
         <option value="burger" disabled>Burger</option>
       </select>
-      <input type="hidden" id="active" name="active" value="yes"/>
-      <br/><br/>
-      <input type="submit" value="Sign up" />
-      <input type="reset" value="Clear form" />
-      <input type="button" value="Cancel" />
-    </form>
-  </div>
+    </div>
+    <input type="hidden" id="active" name="active" value="yes"/>
+    <div class="space-above">
+      <input type="submit" value="Sign up"/>
+      <input type="reset" value="Clear form"/>
+      <input type="button" value="Cancel"/>
+    </div>
+  </form>
+</div>
 </body>
 </html>
