js examples added

--- a/html-basic/home.html
+++ b/html-basic/home.html
@@ -34,8 +34,8 @@
 <br/>
 <a href="https://twitter.com" target="_blank">Twitter</a>
 <br/>
-<a href="https://google.com" target="_blank"><img src="../assets/images/random-pic-14.jpg" alt="random image" width="200"
-                                                  height="100"/></a>
+<img id="thirdImg" onclick="clikedThirdImage()" src="../assets/images/random-pic-14.jpg" alt="random image" width="200"
+                                                  height="100"/>
 
 <h3>My favourite movies</h3>
 <ol>
@@ -56,5 +56,6 @@
     </ol>
   </li>
 </ul>
+<script src="../assets/scripts/script.js"></script>
 </body>
 </html>
